# AUV-2026

./: .gitattributes  .gitignore  .gitmodules  README.md  ZED_Diagnostic_Results.json  build.sh
ros2_ws/src/auv_dashboard/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/auv_dashboard/config/: topics.yaml
ros2_ws/src/auv_dashboard/foxglove/: controls.json  teleop.json
ros2_ws/src/auv_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/auv_msgs/action/: AUVNavigate.action  Effort.action  StateQuaternion.action
ros2_ws/src/auv_msgs/msg/: DeadReckonReport.msg  PingerBearing.msg  PingerTimeDifference.msg  ThrusterForces.msg  ThrusterMicroseconds.msg  UnityState.msg  VelocityReport.msg  VisionObject.msg  VisionObjectArray.msg
ros2_ws/src/auv_msgs/srv/: AutomaticCapture.srv  SetGripper.srv  ShootTorpedo.srv
ros2_ws/src/bringup/: package.xml
ros2_ws/src/bringup/launch/: bringup.launch.py
ros2_ws/src/controls/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/controls/controls/: PIDs.py  __init__.py  goal_helpers.py  navigation_client.py  pid.py  utils.py
ros2_ws/src/controls/include/controls/: attitude_controller.hpp  superimposer.hpp
ros2_ws/src/controls/launch/: attitude_controller.launch.py  controls.launch.py  depth_controller.launch.py  navigation_server.launch.py  planar_controller.launch.py  superimposer.launch.py
ros2_ws/src/controls/params/: Controller_params_real.yaml  Controller_params_sim.yaml
ros2_ws/src/controls/scripts/: depth_controller.py  navigation_client.py  navigation_server.py  planar_controller.py
ros2_ws/src/controls/src/: attitude_controller.cpp  superimposer.cpp
ros2_ws/src/mech_sim/: CMakeLists.txt  package.xml
ros2_ws/src/mech_sim/include/: dynamics_core.hpp
ros2_ws/src/mech_sim/include/mech_sim/: dynamics_core.hpp  state_types.hpp
ros2_ws/src/mech_sim/src/: dyanmics_core.cpp
ros2_ws/src/propulsion/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/propulsion/launch/: drytest.launch.py  mechtest2.launch.py  propulsion.launch.py
ros2_ws/src/propulsion/propulsion/: __init__.py  drytest.py  mechtest2.py  ramp_up.py  thrust_mapper.py  thrust_mapper_utils.py
ros2_ws/src/sensors/: CMakeLists.txt  README.md  package.xml  setup.py
ros2_ws/src/sensors/config/: depth_configuration.yaml
ros2_ws/src/sensors/include/sensors/: Imu_processor.hpp  Sensor_Node.hpp  State_aggregator.hpp  depth_calibration.hpp  depth_processor.hpp  dvl_processor.hpp  imu_movella.hpp  movella_republish.hpp  mr_republisher.hpp  utils.hpp
ros2_ws/src/sensors/launch/: depth_processor.launch.py  down_cam_launch.py  dvl_processor.launch.py  imu_launch.py  imu_movella_launch.py  imu_processor.launch.py  sensor_node.launch.py  sensors.launch.py
ros2_ws/src/sensors/params/: depth_processor.yaml  sensors_frames.yaml
ros2_ws/src/sensors/sensors/: movella_republish.cpp
ros2_ws/src/sensors/src/: Imu_processor.cpp  Sensor_Node.cpp  State_aggregator.cpp  depth_calibration.cpp  depth_processor.cpp  dvl_processor.cpp  imu_test_node.cpp  imuprocessing  imuprocessing.h  imuprocessing2.cpp  imuprocessing2.hpp  movella_republish.cpp
ros2_ws/src/sensors/src/Plannar Controller/: dvl_processor.cpp  dvl_processor.hpp
ros2_ws/src/telemetry/: CMakeLists.txt  README.md  package.xml  setup.py
ros2_ws/src/telemetry/config/: topics.yaml
ros2_ws/src/telemetry/foxglove/: controls.json  drytest_layout.json  electrical_status.json  mission_control.json  perception_debug.json  sensors.json
ros2_ws/src/telemetry/launch/: dashboard.launch.py
ros2_ws/src/telemetry/telemetry/: drytest_foxglove.py  setpoint_to_foxglove.py  vision_to_foxglove.py
ros2_ws/src/teleop/: README.md  package.xml  setup.py
ros2_ws/src/teleop/config/: teleop.yaml
ros2_ws/src/teleop/launch/: teleop.launch.py
ros2_ws/src/teleop/teleop/: teleop_converter.py
ros2_ws/src/vision/: CMakeLists.txt  README.md  YOLO_AUV_Training_Notebook.ipynb  package.xml  setup.py
ros2_ws/src/vision/config/: depth_fusion.defaults.yaml  image_collection_layout.json  image_enhancement.yaml  nodes.yaml  object_detection.yaml  pipeline_launch.yaml  vision_pipeline.yaml  zed_wrapper_real.yaml  zed_wrapper_unity_sim.yaml
ros2_ws/src/vision/include/image_enhancement/: enhancement.hpp
ros2_ws/src/vision/include/vision/: hungarian.hpp  kalman.hpp  object.hpp  object_tracker.hpp  zed_detection.hpp
ros2_ws/src/vision/launch/: image_collection.launch.py  image_enhancement.launch.py  image_enhancement.launch.xml  ipc_test.launch.py  object_detection.launch.py  object_detection.launch.xml  vision_pipeline.launch.py
ros2_ws/src/vision/model_pipeline/: .gitignore  README.md  YOLO_AUV_Training_Notebook copy.ipynb  YOLO_AUV_Training_Notebook.ipynb  YOLO_AUV_Training_Notebook_Linux.ipynb  augment_dataset.py  classes.yaml  create_dirs.sh  data.yaml  data_real.yaml  data_unity.yaml  export_labels.py  files.txt  fix_labels.py  fix_labels_2.py  inference-test.py  inference_test.py  organize_dataset.py  split_data.py  split_images.py  training-real.py  training-unity.py  training.py  training.sh  training_real.py  training_unity.py  visualize_label.py
ros2_ws/src/vision/model_pipeline/.ipynb_checkpoints/: YOLO_AUV_Training_Notebook-checkpoint.ipynb  YOLO_AUV_Training_Notebook_Linux-checkpoint.ipynb
ros2_ws/src/vision/model_pipeline/data_roboflow_augments/: data.yaml
ros2_ws/src/vision/model_pipeline/dataset-backup/: README.dataset.txt  README.roboflow.txt  data.yaml
ros2_ws/src/vision/model_pipeline/raw_data/: README.dataset.txt  README.roboflow.txt  data.yaml
ros2_ws/src/vision/model_pipeline/scripts/: start_collection.sh
ros2_ws/src/vision/model_pipeline/unity-testing-scripts/: data.yaml  inference-3d copy.py  inference-3d.py  inference-test.py  organize_dataset.py  (+2 more)
ros2_ws/src/vision/models/: export_model.py  to-onnx.py
ros2_ws/src/vision/vision/: IPC_test.cpp  depth_fusion_node.py  down_cam_object_detection.py  down_image_enhancement.py  fake_camera_node.py  front_cam_object_detection.py  front_image_enhancement.py  image_collection.py  object_map.cpp  underwater_object_tracker.py  vision_3d_node.py
(+4079 files in other folders)
