<?xml version="1.0"?>
<package format="3">
  <name>auv_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages for AUV</description>
  <maintainer email="dev@mcgillrobotics.com">McGill Robotics</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/mcgill-robotics/AUV-2026</url>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>