<?xml version="1.0"?>
<package format="3">
  <name>controls</name>
  <version>0.1.0</version>
  <description>Control nodes for the AUV.</description>

  <maintainer email="dev@mcgillrobotics.com">McGill Robotics</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/mcgill-robotics/AUV-2026</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>

  <build_depend>eigen3_cmake_module</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
