<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop</name>
  <version>0.1.0</version>
  <description>Manual teleoperation for AUV via gamepad, keyboard, or Foxglove</description>
  <maintainer email="kaidalisohaib@gmail.com">Sohaib Kaidal</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
